src/_content.less
@import "_variables.less";

#content-wrap#content-wrap {
  :is(.content, .content-inner, .content-shrink-wrap) {
    // pull centered table layouts from newsletter feeds to the left
    > [align="center"] {
      margin-left: 0;
    }
  }
  :is(.content, .content-inner) {
    font-family: var(--fonts-content);
    font-size: var(--font-size-post);
    line-height: 1.7;
  }
  .content {
    :is(iframe, img, pre, video) {
      box-sizing: border-box;
      max-width: 100%;
    }
    :is(h1, h2, h3, h4, h5, h6) {
      margin-top: calc(2.5 * var(--font-size-post));
      margin-bottom: var(--font-size-post);
      font: normal normal bold 1em / 1 var(--fonts-heading);
      -webkit-font-smoothing: antialiased;
      text-rendering: optimizeLegibility;
    }
    each(range(6), {
      h@{value} {
        .heading-font-size(@level: @value);
        .reading-width();
      }
    });
    :is(p, ul, ol, dl, figcaption) {
      .reading-width();

      box-sizing: border-box;

      &:has(> iframe:only-child, > img:only-child, > video:only-child) {
        max-width: none;
      }
    }
    table {
      border-collapse: collapse;
    }
    :is(th, td) {
      padding: 0 0.5em;
      border: 1px solid @color-fade3;
      vertical-align: top;
    }
    th {
      background-color: @color-fade1;
    }
    table[border="0"] {
      :is(th, td) {
        padding: 0;
        border: 0;
      }
    }
    hr {
      border-color: @color-fade3;
    }
    .embed-responsive,
    :not(.embed-responsive) iframe {
      margin: 1em 0;
    }
    img:not(.tagsPic),
    video {
      display: block;
      width: auto;
      height: auto;
      margin: 1em 1em 1em 0;
    }
    figure {
      margin: 1em 0;
    }
    figcaption {
      font-size: 0.857em;
      font-style: italic;
      line-height: 1.333;

      &:first-child {
        margin-bottom: -0.5em;
      }
      &:last-child {
        margin-top: -0.5em;
      }
    }
    :is(pre, code) {
      border: 1px solid @color-fade1;
      background-color: @color-fade1;
      color: inherit !important;
      font-family: var(--fonts-mono);
      font-size: 0.857em;
      line-height: 1.333;
    }
    pre {
      padding: 0.5em;
      overflow: auto;
      white-space: pre-wrap;
    }
    code {
      display: inline-block;
      padding: 0 0.31em;
    }
    pre code {
      padding: 0;
      border: none;
      background-color: transparent;
      font-size: 1em;
    }
    :is(q, blockquote) {
      .reading-width();

      display: block;
      box-sizing: border-box;
      margin: 1em 0;
      padding: 0.31em 1em;
      border-left: 4px solid @color-fade3;
      background-color: @color-fade1;

      :first-child {
        margin-top: 0;
      }
      :last-child {
        margin-bottom: 0;
      }
    }
  }

  // ---------------------------------------------------------------------------
  // ui styling
  // ---------------------------------------------------------------------------
  :is(.attachments, .expand-prompt, .footer) {
    font-family: var(--fonts-ui);
  }
  :is(.attachments, .expand-prompt) {
    font-size: 13px;
  }
  .attachments {
    display: block;
    width: fit-content;
    margin: var(--font-size-post) 0;
  }
  .content-shrink-wrap {
    position: relative;
    margin: 0 -10px;
    padding: 0 10px;
    border-bottom: 1px solid @color-fade3;

    &::before {
      content: "";
      position: absolute;
      right: 0;
      bottom: 0;
      left: 0;
      height: 200px;
      background: linear-gradient(to top, @default-bg, transparent);
      pointer-events: none;
    }
  }
  .expand-prompt {
    margin: 20px 0 0;

    &,
    .dijitButtonNode {
      display: block;
    }
    .dijitButtonNode {
      border-color: @color-fade1;
      background-color: @color-button;
      color: @fg-text-muted;
      font-weight: bold;

      &:hover {
        background-color: @color-button-hover;
        color: @default-text;
      }
      &:active {
        background-color: @color-button-active;
      }
    }
    .material-icons {
      top: -2px;
    }
  }
}

